fixed footer on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -313,7 +313,8 @@ html {
   }
 
   #custom-footer {
-    margin-top: 0px;
+    position: relative;
+    top: 50px;
   }
 
   #homepage-heading {
